# src/movies/movies.controller.ts
@@ -1,0 +1,75 @@
+import { Controller, Get, Post, Body, Patch, Param, Delete, Put } from '@nestjs/common';
+import {
+  ApiBearerAuth,
+  ApiOperation,
+  ApiResponse,
+  ApiTags,
+} from '@nestjs/swagger';
+import { MoviesService } from './movies.service';
+import { CreateMovieDto } from './dto/create-movie.dto';
+import { UpdateMovieDto } from './dto/update-movie.dto';
+import { CommentMovieDto } from './dto/comment-movie.dto';
+
+//@ApiBearerAuth()
+@ApiTags('movies')
+@Controller('movies')
+export class MoviesController {
+  constructor(private readonly moviesService: MoviesService) {}
+
+  @Post()
+  @ApiOperation({ summary: 'Create movie' })
+  @ApiResponse({ status: 201, description: 'Movie created.' })
+  @ApiResponse({ status: 400, description: 'Bad request.' })
+  @ApiResponse({ status: 401, description: 'Unauthorized.' })
+  @ApiResponse({ status: 409, description: 'Movie already exists.' })
+  create(@Body() createMovieDto: CreateMovieDto) {
+    return this.moviesService.create(createMovieDto);
+  }
+
+  @Get()
+  @ApiOperation({ summary: 'List movies' })
+  @ApiResponse({ status: 200, description: 'Successful operation.' })
+  @ApiResponse({ status: 401, description: 'Unauthorized.' })
+  findAll() {
+    return this.moviesService.findAll();
+  }
+
+  @Get(':id')
+  @ApiOperation({ summary: 'Get movie details' })
+  @ApiResponse({ status: 200, description: 'Successful operation.' })
+  @ApiResponse({ status: 401, description: 'Unauthorized.' })
+  @ApiResponse({ status: 404, description: 'Movie not found.' })
+  findOne(@Param('id') id: string) {
+    return this.moviesService.findOne(+id);
+  }
+
+  @Post('{id}/comments')
+  @ApiOperation({ summary: 'Rate & comment movie' })
+  @ApiResponse({ status: 201, description: 'Comment created.' })
+  @ApiResponse({ status: 400, description: 'Bad request.' })
+  @ApiResponse({ status: 401, description: 'Unauthorized.' })
+  @ApiResponse({ status: 404, description: 'Movie not found.' })
+  comment(@Param('id') id: string, @Body() commentMovieDto: CommentMovieDto) {
+    return this.moviesService.comment(commentMovieDto);
+  }
+
+  @Put(':id')
+  @ApiOperation({ summary: 'Update movie' })
+  @ApiResponse({ status: 200, description: 'Successful operation.' })
+  @ApiResponse({ status: 400, description: 'Bad request.' })
+  @ApiResponse({ status: 401, description: 'Unauthorized.' })
+  @ApiResponse({ status: 404, description: 'Movie not found.' })
+  update(@Param('id') id: string, @Body() updateMovieDto: UpdateMovieDto) {
+    return this.moviesService.update(+id, updateMovieDto);
+  }
+
+  @Delete(':id')
+  @ApiOperation({ summary: 'Delete movie' })
+  @ApiResponse({ status: 200, description: 'Successful operation.' })
+  @ApiResponse({ status: 400, description: 'Bad request.' })
+  @ApiResponse({ status: 401, description: 'Unauthorized.' })
+  @ApiResponse({ status: 404, description: 'Movie not found.' })
+  remove(@Param('id') id: string) {
+    return this.moviesService.remove(+id);
+  }
+}
